[desk-tool] Fix tabs container overflow

--- a/packages/@sanity/desk-tool/src/panes/documentPane/documentPanel/header/header.css
+++ b/packages/@sanity/desk-tool/src/panes/documentPane/documentPanel/header/header.css
@@ -58,6 +58,7 @@
 
 .tabsContainer {
   flex: 1;
+  min-width: 0;
 }
 
 .versionSelectContainer {
